# Final-Year-Project

./: Verilog2Haskell.cabal  readme.md  user_guide.md
V0/: .gitignore  (+4 more)
drafts/parser/: .gitignore  verilog-earley-parser.cabal
drafts/parser/app/: Main.hs
drafts/parser/syntax-visualiser/: symbol-visualiser.hs  syntax-visualiser.hs
drafts/parser/syntax-visualiser/bnf/: to-del.txt
drafts/parser/syntax-visualiser/bnf/sec-1/: 1.1-library-source-text.txt  1.11-package-items.txt  1.2-SystemVerilog-source-text.txt  1.3-module-parameters-and-ports.txt  1.5-configuration-source-text.txt  1.7-program-items.txt  1.9-class-items.txt
drafts/parser/syntax-visualiser/bnf/sec-2/: 2.1.3-type-declarations.txt  2.10-assertion-declarations.txt  2.11-covergroup-declarations.txt  2.2.1-net-and-variable-types.txt  2.2.2-strengths.txt  2.3-declarations-lists.txt  2.6-function-declarations.txt  2.8-block-item-declarations.txt
drafts/parser/syntax-visualiser/bnf/sec-3/: 3.1-primitive-instantiation-and-instances.txt  3.2-primitive-strengths.txt
drafts/parser/syntax-visualiser/bnf/sec-5/: 5.1-udp-declaration.txt  5.3-udp-body.txt  5.4-udp-instantiation.txt
drafts/parser/syntax-visualiser/bnf/sec-6/: 6.2-procedural-blocks-and-assignments.txt  6.4-statements.txt  6.5-timing-control-statements.txt  6.7-case-statements.txt  6.7.1-patterns.txt  6.8-looping-statements.txt
drafts/parser/syntax-visualiser/bnf/sec-7/: 7.2-specify-path-declarations.txt  7.3-specify-block-terminals.txt  7.5.1-system-timing-check-commands.txt  7.5.2-system-timing-check-command-arguments.txt
drafts/parser/syntax-visualiser/bnf/sec-8/: 8.2-subroutine-calls.txt  8.4-primaries.txt  8.7-numbers.txt
drafts/parser/syntax-visualiser/bnf/sec-9/: 9.3-identifiers.txt
drafts/parser/syntax-visualiser/example-code/: abc.sv  foo.sv  syntax_output.txt
(+285 files in other folders)
