cabal-version:      2.4
name:               verilog-earley-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonah Lehner
maintainer:         jonahlehner@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable verilog-earley-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0,
        Earley == 0.13.0.1
    hs-source-dirs:   app
    default-language: GHC2021

executable syntax-visualiser
    main-is:          syntax-visualiser.hs
    build-depends:
        base ^>=4.17.0,
        Earley == 0.13.0.1,
        graphviz ==  2999.20.1.0,
        fgl == 5.8.0.0,
        process == 1.6.16.0,
        directory == 1.3.8.0
    hs-source-dirs:   syntax-visualiser
    default-language: GHC2021

executable symbol-visualiser
    main-is:          symbol-visualiser.hs
    ghc-options:
        -rtsopts
        -fprof-auto
        "-with-rtsopts=-p -s -h -i0.001"

    build-depends:
        base ^>=4.17.0,
        parsec == 3.1.15.1,
        graphviz ==  2999.20.1.0,
        fgl == 5.8.0.0,
        process == 1.6.16.0,
        directory == 1.3.8.0,
        mtl == 2.3.1,
        containers == 0.6.6,
        cmdargs == 0.10.21
    hs-source-dirs:   syntax-visualiser
    default-language: GHC2021
